add_ms_test(integration_pipeline test_pipeline_integration.cpp)
add_ms_test(integration_repl_pipeline test_repl_pipeline.cpp)
add_ms_test(integration_jit_repl_parity test_jit_repl_parity.cpp)
add_ms_test(integration_scientific_pipeline test_scientific_pipeline.cpp)
add_ms_test(integration_framework_pipeline test_framework_pipeline.cpp)
add_ms_test(integration_symbolic_optim_pipeline test_symbolic_optim_pipeline.cpp)
add_ms_test(integration_repl_linalg_pipeline test_repl_linalg_pipeline.cpp)
add_ms_test(integration_ode_pde_pipeline test_ode_pde_pipeline.cpp)
add_ms_test(integration_signal_fft_pipeline test_signal_fft_pipeline.cpp)
add_ms_test(integration_frameworks_pipeline test_frameworks_pipeline.cpp)
add_ms_test(integration_stats_linalg_pipeline test_stats_linalg_pipeline.cpp)
add_ms_test(integration_prob_stats_signal_pipeline test_prob_stats_signal_pipeline.cpp)
add_ms_test(integration_ode_optim_pipeline test_ode_optim_pipeline.cpp)
add_ms_test(integration_symbolic_numeric_pipeline test_symbolic_numeric_pipeline.cpp)
add_ms_test(integration_prob_stats_pipeline test_prob_stats_pipeline.cpp)
add_ms_test(integration_signal_optim_pipeline test_signal_optim_pipeline.cpp)
add_ms_test(integration_linalg_ode_pipeline test_linalg_ode_pipeline.cpp)
add_ms_test(integration_ode_pde_poly_pipeline test_ode_pde_poly_pipeline.cpp)
add_ms_test(integration_fft_stats_pipeline test_fft_stats_pipeline.cpp)
add_ms_test(integration_stats_optim_linalg_pipeline test_stats_optim_linalg_pipeline.cpp)
add_ms_test(integration_poly_fft_pipeline test_poly_fft_pipeline.cpp)
add_ms_test(integration_ode_stats_prob_pipeline test_ode_stats_prob_pipeline.cpp)
add_ms_test(integration_wave58_pipeline test_wave58_pipeline.cpp)
add_ms_test(integration_wave59_pipeline test_wave59_pipeline.cpp)
add_ms_test(integration_wave60_pipeline test_wave60_pipeline.cpp)
add_ms_test(integration_wave57_60_pipeline test_wave57_60_pipeline.cpp)
add_ms_test(integration_wave66_full_pipeline test_wave66_full_pipeline.cpp)
add_ms_test(integration_repl_wave67_pipeline test_repl_wave67_pipeline.cpp)
add_ms_test(integration_repl_wave68_pipeline test_repl_wave68_pipeline.cpp)
add_ms_test(integration_repl_wave69_pipeline test_repl_wave69_pipeline.cpp)
add_ms_test(integration_repl_wave70_pipeline test_repl_wave70_pipeline.cpp)
add_ms_test(integration_repl_wave71_pipeline test_repl_wave71_pipeline.cpp)
add_ms_test(integration_repl_wave72_pipeline test_repl_wave72_pipeline.cpp)
add_ms_test(integration_repl_wave73_pipeline test_repl_wave73_pipeline.cpp)
add_ms_test(integration_repl_wave74_pipeline test_repl_wave74_pipeline.cpp)
add_ms_test(integration_repl_wave75_pipeline test_repl_wave75_pipeline.cpp)
add_ms_test(integration_repl_wave76_pipeline test_repl_wave76_pipeline.cpp)
add_ms_test(integration_repl_wave77_pipeline test_repl_wave77_pipeline.cpp)
add_ms_test(integration_repl_wave78_pipeline test_repl_wave78_pipeline.cpp)
add_ms_test(integration_repl_wave79_pipeline test_repl_wave79_pipeline.cpp)
add_ms_test(integration_repl_wave80_pipeline test_repl_wave80_pipeline.cpp)
add_ms_test(integration_repl_wave81_pipeline test_repl_wave81_pipeline.cpp)
add_ms_test(integration_repl_wave82_pipeline test_repl_wave82_pipeline.cpp)
add_ms_test(integration_repl_wave83_pipeline test_repl_wave83_pipeline.cpp)
add_ms_test(integration_repl_wave84_pipeline test_repl_wave84_pipeline.cpp)
add_ms_test(integration_repl_wave85_pipeline test_repl_wave85_pipeline.cpp)
add_ms_test(integration_repl_wave86_pipeline test_repl_wave86_pipeline.cpp)
add_ms_test(integration_repl_wave87_pipeline test_repl_wave87_pipeline.cpp)
add_ms_test(integration_repl_wave88_pipeline test_repl_wave88_pipeline.cpp)
add_ms_test(integration_repl_wave91_pipeline test_repl_wave91_pipeline.cpp)
add_ms_test(integration_repl_wave92_pipeline test_repl_wave92_pipeline.cpp)
add_ms_test(integration_repl_wave93_pipeline test_repl_wave93_pipeline.cpp)
add_ms_test(integration_repl_wave94_pipeline test_repl_wave94_pipeline.cpp)
add_ms_test(integration_repl_wave95_pipeline test_repl_wave95_pipeline.cpp)
add_ms_test(integration_repl_wave96_pipeline test_repl_wave96_pipeline.cpp)
add_ms_test(integration_repl_wave97_pipeline test_repl_wave97_pipeline.cpp)
add_ms_test(integration_repl_wave98_pipeline test_repl_wave98_pipeline.cpp)
add_ms_test(integration_repl_wave99_pipeline test_repl_wave99_pipeline.cpp)
add_ms_test(integration_repl_wave100_pipeline test_repl_wave100_pipeline.cpp)
add_ms_test(integration_repl_wave101_pipeline test_repl_wave101_pipeline.cpp)
add_ms_test(integration_repl_wave102_pipeline test_repl_wave102_pipeline.cpp)
add_ms_test(integration_repl_wave103_pipeline test_repl_wave103_pipeline.cpp)
add_ms_test(integration_repl_wave104_pipeline test_repl_wave104_pipeline.cpp)
add_ms_test(integration_repl_wave105_pipeline test_repl_wave105_pipeline.cpp)
add_ms_test(integration_repl_wave106_pipeline test_repl_wave106_pipeline.cpp)
add_ms_test(integration_repl_wave107_pipeline test_repl_wave107_pipeline.cpp)
add_ms_test(integration_repl_wave108_pipeline test_repl_wave108_pipeline.cpp)
add_ms_test(integration_repl_wave109_pipeline test_repl_wave109_pipeline.cpp)
add_ms_test(integration_repl_wave112_pipeline test_repl_wave112_pipeline.cpp)
add_ms_test(integration_repl_wave113_pipeline test_repl_wave113_pipeline.cpp)
add_ms_test(integration_repl_wave114_pipeline test_repl_wave114_pipeline.cpp)
add_ms_test(integration_repl_wave115_pipeline test_repl_wave115_pipeline.cpp)
add_ms_test(integration_repl_wave116_pipeline test_repl_wave116_pipeline.cpp)
add_ms_test(integration_repl_wave117_pipeline test_repl_wave117_pipeline.cpp)
add_ms_test(integration_repl_wave118_pipeline test_repl_wave118_pipeline.cpp)
add_ms_test(integration_repl_wave119_pipeline test_repl_wave119_pipeline.cpp)
add_ms_test(integration_repl_wave120_pipeline test_repl_wave120_pipeline.cpp)
add_ms_test(integration_repl_wave121_pipeline test_repl_wave121_pipeline.cpp)
add_ms_test(integration_repl_wave122_pipeline test_repl_wave122_pipeline.cpp)
add_ms_test(integration_repl_wave123_pipeline test_repl_wave123_pipeline.cpp)
add_ms_test(integration_repl_wave124_pipeline test_repl_wave124_pipeline.cpp)
add_ms_test(integration_repl_wave125_pipeline test_repl_wave125_pipeline.cpp)
add_ms_test(integration_repl_wave126_pipeline test_repl_wave126_pipeline.cpp)
add_ms_test(integration_repl_wave127_pipeline test_repl_wave127_pipeline.cpp)
add_ms_test(integration_repl_wave128_pipeline test_repl_wave128_pipeline.cpp)
add_ms_test(integration_repl_wave129_pipeline test_repl_wave129_pipeline.cpp)
add_ms_test(integration_repl_wave130_pipeline test_repl_wave130_pipeline.cpp)
add_ms_test(integration_repl_wave131_pipeline test_repl_wave131_pipeline.cpp)
add_ms_test(integration_repl_wave132_pipeline test_repl_wave132_pipeline.cpp)
add_ms_test(integration_repl_wave133_pipeline test_repl_wave133_pipeline.cpp)
add_ms_test(integration_repl_wave134_pipeline test_repl_wave134_pipeline.cpp)
add_ms_test(integration_repl_wave135_pipeline test_repl_wave135_pipeline.cpp)
add_ms_test(integration_repl_wave136_pipeline test_repl_wave136_pipeline.cpp)
add_ms_test(integration_repl_wave137_pipeline test_repl_wave137_pipeline.cpp)
add_ms_test(integration_repl_wave138_pipeline test_repl_wave138_pipeline.cpp)
add_ms_test(integration_repl_wave139_pipeline test_repl_wave139_pipeline.cpp)
add_ms_test(integration_repl_wave140_pipeline test_repl_wave140_pipeline.cpp)
add_ms_test(integration_repl_wave141_pipeline test_repl_wave141_pipeline.cpp)
add_ms_test(integration_repl_wave142_pipeline test_repl_wave142_pipeline.cpp)
add_ms_test(integration_repl_wave143_pipeline test_repl_wave143_pipeline.cpp)
add_ms_test(integration_repl_wave144_pipeline test_repl_wave144_pipeline.cpp)
add_ms_test(integration_repl_wave145_pipeline test_repl_wave145_pipeline.cpp)
add_ms_test(integration_repl_wave146_pipeline test_repl_wave146_pipeline.cpp)
add_ms_test(integration_repl_wave147_pipeline test_repl_wave147_pipeline.cpp)
add_ms_test(integration_repl_wave148_pipeline test_repl_wave148_pipeline.cpp)
add_ms_test(integration_repl_wave149_pipeline test_repl_wave149_pipeline.cpp)
add_ms_test(integration_repl_wave150_pipeline test_repl_wave150_pipeline.cpp)
add_ms_test(integration_repl_wave151_pipeline test_repl_wave151_pipeline.cpp)
add_ms_test(integration_repl_wave152_pipeline test_repl_wave152_pipeline.cpp)
add_ms_test(integration_repl_wave153_pipeline test_repl_wave153_pipeline.cpp)
add_ms_test(integration_repl_wave154_pipeline test_repl_wave154_pipeline.cpp)
add_ms_test(integration_repl_wave155_pipeline test_repl_wave155_pipeline.cpp)
add_ms_test(integration_repl_wave156_pipeline test_repl_wave156_pipeline.cpp)
add_ms_test(integration_repl_wave157_pipeline test_repl_wave157_pipeline.cpp)
add_ms_test(integration_repl_wave158_pipeline test_repl_wave158_pipeline.cpp)
add_ms_test(integration_repl_wave159_pipeline test_repl_wave159_pipeline.cpp)
add_ms_test(integration_repl_wave160_pipeline test_repl_wave160_pipeline.cpp)
add_ms_test(integration_repl_wave161_pipeline test_repl_wave161_pipeline.cpp)
add_ms_test(integration_repl_wave162_pipeline test_repl_wave162_pipeline.cpp)
add_ms_test(integration_repl_wave163_pipeline test_repl_wave163_pipeline.cpp)
add_ms_test(integration_repl_wave164_pipeline test_repl_wave164_pipeline.cpp)
add_ms_test(integration_repl_wave165_pipeline test_repl_wave165_pipeline.cpp)
add_ms_test(integration_repl_wave166_pipeline test_repl_wave166_pipeline.cpp)
add_ms_test(integration_repl_wave167_pipeline test_repl_wave167_pipeline.cpp)
add_ms_test(integration_repl_wave168_pipeline test_repl_wave168_pipeline.cpp)
add_ms_test(integration_repl_wave169_pipeline test_repl_wave169_pipeline.cpp)
add_ms_test(integration_repl_wave170_pipeline test_repl_wave170_pipeline.cpp)
add_ms_test(integration_repl_wave171_pipeline test_repl_wave171_pipeline.cpp)
add_ms_test(integration_repl_wave172_pipeline test_repl_wave172_pipeline.cpp)
add_ms_test(integration_repl_wave173_pipeline test_repl_wave173_pipeline.cpp)
add_ms_test(integration_repl_wave174_pipeline test_repl_wave174_pipeline.cpp)
add_ms_test(integration_repl_wave175_pipeline test_repl_wave175_pipeline.cpp)
add_ms_test(integration_repl_wave232_pipeline test_repl_wave232_pipeline.cpp)
add_ms_test(integration_repl_wave233_pipeline test_repl_wave233_pipeline.cpp)
add_ms_test(integration_repl_wave234_pipeline test_repl_wave234_pipeline.cpp)
add_ms_test(integration_repl_wave236_pipeline test_repl_wave236_pipeline.cpp)
add_ms_test(integration_repl_wave237_pipeline test_repl_wave237_pipeline.cpp)
add_ms_test(integration_repl_wave240_pipeline test_repl_wave240_pipeline.cpp)
add_ms_test(integration_repl_wave241_pipeline test_repl_wave241_pipeline.cpp)
add_ms_test(integration_repl_wave242_pipeline test_repl_wave242_pipeline.cpp)
add_ms_test(integration_pde_repl_pipeline test_pde_repl_pipeline.cpp)
add_ms_test(integration_symbolic_repl_pipeline test_symbolic_repl_pipeline.cpp)
add_ms_test(integration_ode_repl_pipeline test_ode_repl_pipeline.cpp)
add_ms_test(integration_prob_stats_fft_repl_pipeline test_prob_stats_fft_repl_pipeline.cpp)
add_ms_test(integration_ode_repl_complex_pipeline test_ode_repl_complex_pipeline.cpp)
add_ms_test(integration_frameworks_repl_pipeline test_frameworks_repl_pipeline.cpp)
add_ms_test(integration_session_objects_repl_pipeline test_session_objects_repl_pipeline.cpp)
add_ms_test(integration_stateful_objects2_repl_pipeline test_stateful_objects2_repl_pipeline.cpp)
add_ms_test(integration_tensorops_decompose_repl_pipeline test_tensorops_decompose_repl_pipeline.cpp)
add_ms_test(integration_distributed_repl_pipeline test_distributed_repl_pipeline.cpp)
add_ms_test(integration_repl_wave110_pipeline test_repl_wave110_pipeline.cpp)
add_ms_test(integration_repl_wave111_pipeline test_repl_wave111_pipeline.cpp)
add_ms_test(integration_repl_wave89_pipeline test_repl_wave89_pipeline.cpp)
add_ms_test(integration_repl_wave90_pipeline test_repl_wave90_pipeline.cpp)
add_ms_test(integration_crypto_wave231 test_crypto_wave231.cpp)

add_executable(integration_mathscriptc_pipeline test_mathscriptc_pipeline.cpp)
target_link_libraries(integration_mathscriptc_pipeline PRIVATE mathscript GTest::gtest_main)
target_include_directories(integration_mathscriptc_pipeline PRIVATE
    ${CMAKE_SOURCE_DIR}/include
    ${CMAKE_BINARY_DIR}/include
)
target_compile_definitions(integration_mathscriptc_pipeline PRIVATE
    "MATHSCRIPTC_PATH=\"$<TARGET_FILE:mathscriptc>\""
)
add_dependencies(integration_mathscriptc_pipeline mathscriptc)
add_test(NAME integration_mathscriptc_pipeline COMMAND integration_mathscriptc_pipeline)
